--- a/src/components/Newsletter/Row.module.scss
+++ b/src/components/Newsletter/Row.module.scss
@@ -105,3 +105,35 @@ a.title {
   display: block;
   padding: 0;
 }
+
+.block {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 1em;
+
+  @include mappy-bp(medium) {
+    flex-direction: row;
+    align-items: flex-start;
+    margin: 3em 0;
+  }
+}
+
+.date {
+  padding: 1em 1em 0.5em;
+  color: $ict-grey-text;
+  font-size: 1.5em;
+  font-weight: 300;
+  flex-shrink: 0;
+
+  @include mappy-bp(medium) {
+    text-align: center;
+    min-width: 9em;
+    flex-basis: 9em;
+  }
+}
+
+.newsletter {
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+}
